[gd_scene load_steps=33 format=2]

[ext_resource path="res://data/characters/enemies/bat/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://data/characters/enemies/bat/Bat.png" type="Texture" id=2]
[ext_resource path="res://data/characters/enemies/bat/Bat.gd" type="Script" id=3]
[ext_resource path="res://data/tools/Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/ui/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://data/characters/enemies/bat/EnemyDeathEffect.png" type="Texture" id=6]
[ext_resource path="res://data/tools/Overlap/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://data/tools/Overlap/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://data/characters/enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://data/assets/Music and Sounds/EnemyDie.wav" type="AudioStream" id=10]
[ext_resource path="res://data/characters/enemies/bat/HealthBar.gd" type="Script" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 4.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "animate",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=20]
radius = 88.0

[sub_resource type="CircleShape2D" id=21]
radius = 0.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "fly"
frame = 2
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="DeathEffect" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 19 )
animation = "animate"
offset = Vector2( 0, -8 )

[node name="Audio" type="AudioStreamPlayer" parent="DeathEffect"]
stream = ExtResource( 10 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
collision_mask = 3

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.490196 )
shape = SubResource( 20 )

[node name="EnemyHitbox" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="EnemyHitbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 21 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color( 1, 0.109804, 0.109804, 1 )
margin_left = -16.0
margin_top = -40.0
margin_right = 16.0
margin_bottom = -32.0
value = 100.0
percent_visible = false
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="health_changed" from="Stats" to="HealthBar" method="_on_Stats_health_changed"]
[connection signal="max_health_changed" from="Stats" to="HealthBar" method="_on_Stats_max_health_changed"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="animation_finished" from="DeathEffect" to="." method="_on_DeathEffect_animation_finished"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="EnemyHitbox"]
